--- a/src/app/home/accom-list/accom-list.component.tns.scss
+++ b/src/app/home/accom-list/accom-list.component.tns.scss
@@ -15,9 +15,9 @@
 .accom-info{
     .accom-area{ color: #666; }
     .item-name{font-size: 18; color: #333;}
-    .item-org-price{text-decoration: line-through;}
     .item-price{color: #333;}
-    .sale-rate{color: #93b85f; margin-left: 10;}
 }
+.sale-rate{color: #93b85f; margin-left: 10;}
+.item-org-price{text-decoration: line-through; font-size: 13;}
 
 .accom_sido{text-align: center;}
