마이페이지 & 내정보 페이지 생성 	modified:   src/app/home/home-routing.module.ts 	modified:   src/app/home/home.module.tns.ts 	modified:   src/app/home/home.module.ts 	modified:   src/app/home/layout/header/header.component.html 	modified:   src/app/home/layout/header/header.component.ts 	new file:   src/app/home/personal/mypage/info/info.component.html 	new file:   src/app/home/personal/mypage/info/info.component.scss 	new file:   src/app/home/personal/mypage/info/info.component.spec.ts 	new file:   src/app/home/personal/mypage/info/info.component.tns.html 	new file:   src/app/home/personal/mypage/info/info.component.tns.scss 	new file:   src/app/home/personal/mypage/info/info.component.ts 	modified:   src/app/home/personal/mypage/mypage.component.html 	modified:   src/app/home/personal/mypage/mypage.component.scss 	modified:   src/app/home/personal/mypage/mypage.component.ts 	modified:   src/styles.scss

--- a/src/app/home/layout/header/header.component.html
+++ b/src/app/home/layout/header/header.component.html
@@ -8,9 +8,8 @@
             <nav class="util">
                 <ul>
                     <li><a href="http://59.15.3.210:8058/#/login" target="_blank">파트너센터</a></li>
-                    <li><a href="http://59.15.3.210:8058/#/login" target="_blank">{{outerWidth}}</a></li>
                     <li *ngIf="!isLoggedIn"><a (click)="goLogin()">LOGIN</a></li>
-                    <li *ngIf="isLoggedIn"><a (click)="logout()">MYPAGE</a></li>
+                    <li *ngIf="isLoggedIn"><a routerLink="/mypage">MYPAGE</a></li>
                 </ul>
             </nav>
         </div>
