--- a/src/app/home/personal/mypage/mypage.component.html
+++ b/src/app/home/personal/mypage/mypage.component.html
@@ -3,12 +3,12 @@
         <div class="content">
             <span class="mp_title" routerLink="/mypage">마이페이지</span>
             <ul class="ul_h">
-                <li><a routerLink="info">회원정보 수정</a></li>
-                <li><a routerLink="booking">예약조회</a></li>
-                <li><a href="#">1:1 문의</a></li>
-                <li><a href="#">이용문의</a></li>
-                <li><a href="#">이용후기</a></li>
-                <li><a (click)="logout()">로그아웃</a></li>
+                <li><a [@highlight]="selectedTab === 'info' ? 'on' : 'off'" routerLink="info">회원정보 수정</a></li>
+                <li><a [@highlight]="selectedTab === 'booking' ? 'on' : 'off'" routerLink="booking">예약조회</a></li>
+                <li><a [@highlight]="selectedTab === 'a' ? 'on' : 'off'" href="#">1:1 문의</a></li>
+                <li><a [@highlight]="selectedTab === 'b' ? 'on' : 'off'" href="#">이용문의</a></li>
+                <li><a [@highlight]="selectedTab === 'c' ? 'on' : 'off'" href="#">이용후기</a></li>
+                <li><a [@highlight]="selectedTab === 'd' ? 'on' : 'off'" (click)="logout()">로그아웃</a></li>
             </ul>
         </div>
     </nav>
