웹 사용자 예약리스트 및 상세조회 	modified:   src/app/global/global.ts 	modified:   src/app/home/home-routing.module.ts 	modified:   src/app/home/home.module.ts 	modified:   src/app/home/login/login.component.html 	modified:   src/app/home/personal/mypage/mybooking/mybooking-detail.component.html 	modified:   src/app/home/personal/mypage/mybooking/mybooking-detail.component.scss 	modified:   src/app/home/personal/mypage/mybooking/mybooking-detail.component.ts 	modified:   src/app/home/personal/mypage/mybooking/mybooking.component.html 	modified:   src/app/home/personal/mypage/mybooking/mybooking.component.ts 	modified:   src/app/home/personal/mypage/mypage.component.html 	modified:   src/app/pipe/customdate.pipe.ts

--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -61,10 +61,10 @@
             </nav>
             <div class="input_wrap">
                 <div>
-                    <input type="text" placeholder="주문번호" [(ngModel)]="srch.resvNo">
+                    <input type="text" placeholder="주문번호" [(ngModel)]="srch.ResvNo">
                 </div>
                 <div>
-                    <input type="password" placeholder="비밀번호" [(ngModel)]="srch.mobile">
+                    <input type="password" placeholder="비밀번호" [(ngModel)]="srch.Mobile">
                 </div>
                 <div>
                     <button class="primary_btn login_btn" (click)="searchBooking()">조회</button>
