--- a/src/app/home/personal/mypage/mypage.component.html
+++ b/src/app/home/personal/mypage/mypage.component.html
@@ -4,7 +4,7 @@
             <span class="mp_title" routerLink="/mypage">마이페이지</span>
             <ul class="ul_h">
                 <li><a [@highlight]="selectedTab === 'info' ? 'on' : 'off'" routerLink="info">회원정보 수정</a></li>
-                <li><a [@highlight]="selectedTab === 'booking' ? 'on' : 'off'" routerLink="booking">예약조회</a></li>
+                <li><a [@highlight]="selectedTab === 'booking' || selectedTab === 'reservation' ? 'on' : 'off'" routerLink="booking">예약조회</a></li>
                 <li><a [@highlight]="selectedTab === 'a' ? 'on' : 'off'" href="#">1:1 문의</a></li>
                 <li><a [@highlight]="selectedTab === 'b' ? 'on' : 'off'" href="#">이용문의</a></li>
                 <li><a [@highlight]="selectedTab === 'c' ? 'on' : 'off'" href="#">이용후기</a></li>
