--- a/src/app/home/personal/mypage/info/info.component.scss
+++ b/src/app/home/personal/mypage/info/info.component.scss
@@ -1,6 +1,12 @@
-.page-wrapper{
-    margin: 20px;
+.joinWrap {
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
 }
+
+// .page-wrapper{
+//     margin-top: 80px;
+// }
 
 .input_wrap .form-input-group .input-field{
     min-width: 80px;
