--- a/src/app/home/personal/mypage/mypage.component.html
+++ b/src/app/home/personal/mypage/mypage.component.html
@@ -8,7 +8,7 @@
                 <li><a [@highlight]="selectedTab === 'a' ? 'on' : 'off'" href="#">1:1 문의</a></li>
                 <li><a [@highlight]="selectedTab === 'b' ? 'on' : 'off'" href="#">이용문의</a></li>
                 <li><a [@highlight]="selectedTab === 'c' ? 'on' : 'off'" href="#">이용후기</a></li>
-                <li><a [@highlight]="selectedTab === 'd' ? 'on' : 'off'" (click)="logout()">로그아웃</a></li>
+                <li><a [@highlight]="selectedTab === 'd' ? 'on' : 'off'">로그아웃</a></li>
             </ul>
         </div>
     </nav>
