--- a/src/app/home/personal/mypage/mybooking/mybooking-detail.component.scss
+++ b/src/app/home/personal/mypage/mybooking/mybooking-detail.component.scss
@@ -10,3 +10,12 @@
     border-spacing: 0;
     margin-top: 20px;
 }
+.resv-stat{
+    display: inline-block;
+    width: 150px;
+}
+
+.btn-cancle{
+    color: #e22;
+    font-weight: 500;
+}
